// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toHaveFiredEventWith fails when an event fires with the correct payload 1`] = `
"[2mexpect([22m[31mcomponent[39m[2m).[22mnot[2m.[22mtoHaveFiredEventWith[2m([22m[32mexpected[39m[2m)[22m

Expected not to have fired with: [32m50[39m

Event: e2
Number of calls: [31m1[39m
Events stack: [31m[\\"e2\\"][39m"
`;

exports[`.toHaveFiredEventWith does not print out received when event did not fire 1`] = `
"[2mexpect([22m[31mcomponent[39m[2m).[22mtoHaveFiredEventWith[2m([22m[32mexpected[39m[2m)[22m

Expected: [32m100[39m

Event: e2
Number of calls: [31m0[39m
Events stack: [31m[][39m"
`;

exports[`.toHaveFiredEventWith fails when an event fires without the correct payload 1`] = `
"[2mexpect([22m[31mcomponent[39m[2m).[22mtoHaveFiredEventWith[2m([22m[32mexpected[39m[2m)[22m

Expected: [32m100[39m
Received: [31m50[39m

Event: e2
Number of calls: [31m1[39m
Events stack: [31m[\\"e2\\"][39m"
`;

exports[`.toHaveFiredEventWith prints out all received payloads on fail 1`] = `
"[2mexpect([22m[31mcomponent[39m[2m).[22mtoHaveFiredEventWith[2m([22m[32mexpected[39m[2m)[22m

Expected: [32m100[39m
Received: 
	   0: [31m50[39m,
	   1: [31m50[39m,
	   2: [31m50[39m

Event: e2
Number of calls: [31m3[39m
Events stack: [31m[\\"e2\\", \\"e2\\", \\"e2\\"][39m"
`;

exports[`.toHaveFiredEventWith prints out objects correctly on fail 1`] = `
"[2mexpect([22m[31mcomponent[39m[2m).[22mtoHaveFiredEventWith[2m([22m[32mexpected[39m[2m)[22m

Expected: [32m100[39m
Received: [31m{\\"a\\": 1, \\"b\\": 2}[39m

Event: e4
Number of calls: [31m1[39m
Events stack: [31m[\\"e4\\"][39m"
`;
